web/client/themes/default/less/navbar.less
//
// Copyright 2021, GeoSolutions Sas.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree.
//

// **************
// Theme
// **************

#ms-components-theme(@theme-vars) {
    #mapstore-navbar-container {
        .background-color-var(@theme-vars[main-bg], true);
    }
}

// **************
// Layout
// **************
.navbar-dx {
    border-radius: @border-radius-base;
}
.navbar-dx ul,
ol {
    margin-bottom: 0;
}

.navbar-dx .MapSearchBar .input-group,
.navbar-dx.shadow {
    -webkit-box-shadow: -1px 1px 5px 1px rgba(94, 94, 94, 1);
    -moz-box-shadow: -1px 1px 5px 1px rgba(94, 94, 94, 1);
    box-shadow: -1px 1px 5px 1px rgba(94, 94, 94, 1);
}

.navbar-dx ul,
ol {
    margin-bottom: 0;
}

.navbar .square-button {
    height: @square-btn-size;
    width: @square-btn-size;
}

.nav-menu {
    overflow-x: hidden;
    overflow-y: hidden;
}

.nav-content {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
}

.nav-body {
    position: absolute;
    top: 40px;
    bottom: 0;
    overflow: auto;
    width: 100%;
}

#mapstore-navbar-container {
    height: 40px;
    .nav {
        &.pull-left {
            display: flex;
            flex: 1;

            >li {
                >a {
                    display: flex;
                    align-items: center;
                    height: @square-btn-size;
                    padding: 0 15px;
                }
            }
        }
    }
     .dropdown > button{
        margin: 5px;
     }
}

